--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,39 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: rgb(var(--background-start-rgb));
+  background: rgba(224, 224, 247, 0.751);
+}
+
+input,
+select {
+  background-color: rgba(0, 26, 255, 0.217);
+  border: 1px solid rgb(21, 0, 255);
+  border-radius: 10px;
+  padding: 10px;
+  margin: 5px;
+  outline: none;
+}
+input::placeholder,
+select::placeholder {
+color: black;
+}
+
+.submit-button {
+  background-color: rgba(0, 26, 255, 0.59);
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 10px;
+  font-weight: bold;
+  color: rgb(var(--foreground-rgb)) ;
+}
+
+.submit-button:hover {
+  background-color: rgba(0, 26, 255, 0.217);
+}
+
+.error-message {
+  color: rgb(238, 80, 80);
+  font-size: 10px;
+  margin-left: 10px;
 }
